java 9 compliance - base64, bytearrtohex, installed fonts, xml sax parser